--- a/index.html
+++ b/index.html
@@ -7,26 +7,39 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
-    <title>UnitySDK</title>
+    <title>Phoenix</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <link rel="stylesheet" href="TemplateData/style.css" />
   </head>
   <body class="dark">
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas"></canvas>
-    </div>
-    <div id="loading-cover" style="display: none">
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty" style="display: none">
-          <div id="unity-progress-bar-full"></div>
+    <div id="screen">
+      <div id="root">
+        <div class="MuiBox-root" style="user-select: none">
+          <div id="left-frame" class="left-frame">
+            <div id="unity-container" class="unity-desktop">
+              <canvas id="unity-canvas"></canvas>
+            </div>
+            <div id="loading-cover" style="display: none">
+              <div id="unity-loading-bar">
+                <div id="unity-logo"></div>
+                <div id="unity-progress-bar-empty" style="display: none">
+                  <div id="unity-progress-bar-full"></div>
+                </div>
+                <div class="spinner"></div>
+              </div>
+            </div>
+          </div>
+          <div class="right-frame">
+            <iframe src="https://chaincolosseum.gitbook.io/phoenix/" name="white_paper" class="sc-iOeugr hnMTuv"></iframe>
+          </div>
         </div>
-        <div class="spinner"></div>
       </div>
     </div>
     <div id="unity-fullscreen-button" style="display: none"></div>
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-auth-compat.js"></script>
     <script type="module">
-            const hideFullScreenButton = "true";
+            const hideFullScreenButton = "";
             const buildUrl = "Build";
             const loaderUrl = buildUrl + "/docs.loader.js";
             const config = {
@@ -34,9 +47,9 @@
               frameworkUrl: buildUrl + "/docs.framework.js",
               codeUrl: buildUrl + "/docs.wasm",
               streamingAssetsUrl: "StreamingAssets",
-              companyName: "Thirdweb",
-              productName: "UnitySDK",
-              productVersion: "4.12.4",
+              companyName: "T2WEB",
+              productName: "Phoenix",
+              productVersion: "1.4.5.9",
             };
 
             const container = document.querySelector("#unity-container");
@@ -62,9 +75,15 @@
               return false;
             }());
 
-            if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+            if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent))
+            {
               container.className = "unity-mobile";
               config.devicePixelRatio = 1;
+
+              var leftFrame = document.getElementById("left-frame");
+              const screen = document.getElementById("screen");
+              screen.appendChild(leftFrame);
+              document.getElementById("root").style.display = "none";
             }
             loadingCover.style.display = "";
             const script = document.createElement("script");
@@ -76,13 +95,35 @@
                   progressBarEmpty.style.display = "";
                   progressBarFull.style.width = `${100 * progress}%`;
                 }).then((unityInstance) => {
+                  window.unityInstance = unityInstance;
+
+                  // Firebase configuration
+                  const firebaseConfig = {
+                    apiKey: "AIzaSyA6W0078V_sH1AtNx2WQ1TJ5mDhFuDTLB4",
+                    authDomain: "phoenix-beta-1fcc8.firebaseapp.com",
+                    projectId: "phoenix-beta-1fcc8",
+                    storageBucket: "phoenix-beta-1fcc8.appspot.com",
+                    messagingSenderId: "759118895055",
+                    appId: "1:759118895055:web:4d7d2132d5ecac61e2e4ba",
+                    measurementId: "G-4KJ87BRD7L"
+                  };
+
+                  // Initialize Firebase
+                  const firebaseApp = firebase.initializeApp(firebaseConfig);
+
+                  // Initialize Firebase Authentication and get a reference to the service
+                  const firebaseAuth = firebaseApp.auth();
+
+                  // Set Session Persistence
+                  firebaseAuth.setPersistence(firebase.auth.Auth.Persistence.SESSION);
+
                   loadingCover.style.display = "none";
                   if (canFullscreen) {
                     if (!hideFullScreenButton) {
                       fullscreenButton.style.display = "";
                     }
                     fullscreenButton.onclick = () => {
-                      unityInstance.SetFullscreen(1);
+                      document.makeFullscreen('unity-container');
                     };
                   }
                 }).catch((message) => {
